rightsizing: add resource quota feature
